hotfix/fix button hover on mobile (#279)
* fix(button): to restrict hover rules apply only to devices that support :hover

* fix(button): lint error media-feature-colon-space-after

--- a/react/Button/Button.less
+++ b/react/Button/Button.less
@@ -1,9 +1,11 @@
 @import (reference) '~seek-asia-style-guide/theme';
 
 .hoverState(@rules) {
-  &:hover,
-  &.rootHover {
-    @rules();
+  @media (hover: hover) {
+    &:hover,
+    &.rootHover {
+      @rules();
+    }
   }
 }
 
